--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "e-commerce",
   "version": "1.0.0",
-  "description": "",
+  "description": "create an e-commerce API with Node.js and express framework",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
@@ -11,15 +11,26 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "cors": "^2.8.5",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
+    "express-async-handler": "^1.2.0",
     "helmet": "^6.1.5",
     "joi": "^17.9.1",
     "mongoose": "^7.0.3",
-    "morgan": "^1.10.0"
+    "morgan": "^1.10.0",
+    "slugify": "^1.6.6"
   },
   "devDependencies": {
     "jshint": "^2.13.6",
     "nodemon": "^2.0.22"
-  }
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/AMRRAGHEB118/e-commerce.git"
+  },
+  "bugs": {
+    "url": "https://github.com/AMRRAGHEB118/e-commerce/issues"
+  },
+  "homepage": "https://github.com/AMRRAGHEB118/e-commerce#readme"
 }
