--- a/package.json
+++ b/package.json
@@ -18,14 +18,17 @@
     "express-async-handler": "^1.2.0",
     "express-validator": "^7.0.1",
     "helmet": "^6.1.5",
-    "joi": "^17.9.1",
     "mongoose": "^7.0.3",
     "morgan": "^1.10.0",
     "slugify": "^1.6.6"
   },
   "devDependencies": {
+    "eslint": "^8.38.0",
+    "eslint-config-prettier": "^8.8.0",
+    "eslint-plugin-prettier": "^4.2.1",
     "jshint": "^2.13.6",
-    "nodemon": "^2.0.22"
+    "nodemon": "^2.0.22",
+    "prettier": "^2.8.7"
   },
   "repository": {
     "type": "git",
