--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
     "helmet": "^6.1.5",
     "mongoose": "^7.0.3",
     "morgan": "^1.10.0",
-    "slugify": "^1.6.6"
+    "slugify": "^1.6.6",
+    "validator": "^13.9.0"
   },
   "devDependencies": {
     "eslint": "^8.38.0",
