--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "express-async-handler": "^1.2.0",
     "express-validator": "^7.0.1",
     "helmet": "^6.1.5",
+    "jsonwebtoken": "^9.0.0",
     "mongoose": "^7.0.3",
     "morgan": "^1.10.0",
     "slugify": "^1.6.6",
