--- a/.prettierrc
+++ b/.prettierrc
@@ -1,1 +1,1 @@
-{ "semi": true, "singleQuote": true, "tabWidth": 4, "trailingComma": "es5" }
+{ "semi": false, "singleQuote": true, "tabWidth": 4, "trailingComma": "es5" }
